<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RecordFeelings">

    <LinearLayout
        android:id="@+id/linearLayout_recordFeelings"
        android:layout_width="559dp"
        android:layout_height="337dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/record_feelings_container_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.024">

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/title_recordFeelings"
            android:layout_width="587dp"
            android:layout_height="117dp"
            android:gravity="center"
            android:text="@string/title_recordFeelings"
            android:textColor="@color/blue"
            android:textSize="35sp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="18dp" />

        <LinearLayout
            android:id="@+id/linearLayout_chooseFeelings"
            android:layout_width="547dp"
            android:layout_height="85dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/btn_happy"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/happy"
                tools:ignore="ImageContrastCheck,DuplicateSpeakableTextCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_peace"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/peace"
                tools:ignore="ImageContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_sad"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/sad"
                tools:ignore="ImageContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_cry"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/crying"
                tools:ignore="ImageContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_angry"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/angry"
                tools:ignore="ImageContrastCheck" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/btn_ill"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:background="@drawable/btn_feelings"
                android:contentDescription="@string/todo"
                android:scaleType="centerCrop"
                app:srcCompat="@drawable/ill"
                tools:ignore="ImageContrastCheck" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="36dp"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/text_happy"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/text_happy"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/ext_peace"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_peace"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_sad"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_sad"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_crying"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_crying"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_angry"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_angry"
                android:textColor="@color/blue"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/text_sick"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/text_sick"
                android:textColor="@color/blue"
                android:textSize="15sp" />
        </LinearLayout>

        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/btn_addFeelings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:minHeight="48dp"
            android:text="@string/btn_addFeelings"
            android:textAllCaps="false" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="556dp"
        android:layout_height="427dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="1dp"
        android:background="@drawable/record_feelings_container_shape"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.384"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout_recordFeelings"
        app:layout_constraintVertical_bias="0.103">

        <Space
            android:layout_width="match_parent"
            android:layout_height="28dp" />

        <TextView
            android:id="@+id/text_titleOfDiary"
            android:layout_width="464dp"
            android:layout_height="331dp"
            android:layout_gravity="center"
            android:gravity="start"
            android:text="@string/text_Diary"
            android:textColor="@color/blue"
            android:textSize="15sp" />

        <Button
            android:id="@+id/btn_addDiary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/btn_addDiary"
            android:textAllCaps="false" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>