<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".AnalyzeRepo">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/repo_title"
            android:layout_width="820dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#12B5A5"
            android:gravity="center"
            android:text="@string/repo_title"
            android:textColor="#3E3E3E"
            android:textSize="35sp" />

        <Button
            android:id="@+id/repo_generate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="#009688"
            android:text="@string/repo_generation"
            android:textColor="#000000" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="#EBFFFD"
        android:orientation="horizontal">


        <TextView
            android:id="@+id/textView3"
            android:layout_width="134dp"
            android:layout_height="102dp"
            android:layout_weight="2"
            android:gravity="left|center_vertical"
            android:paddingLeft="15dp"
            android:text="@string/this_month_report"
            android:textSize="35sp" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center|center_horizontal"
            android:text="0"
            android:textSize="45sp" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/days"
            android:textSize="35sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="20"
            android:paddingLeft="30dp"
            android:text="😊 with day"
            android:textColor="#EF6C00"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="20"
            android:paddingLeft="30dp"
            android:text="😒 with day"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView7"
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:layout_weight="20"
            android:paddingLeft="30dp"
            android:text="😡 with day"
            android:textColor="#E91E63"
            android:textSize="30sp" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="20"
            android:text="(Sample alalysis text)" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="@mipmap/linegraph_demo"
        android:orientation="horizontal">


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Mood Calendar" />

        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Mood Analysis" />
    </LinearLayout>


</LinearLayout>